--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <p class="subHeading">Like what you see?</p>
                 <h2>I'd love to hear from you!</h2>
 				<p> Mail: rkarthikkumar@outlook.com  ||  Mobile: (902) 789 4476</p>
-				<a href="/img/Karthik_Rammoorthy_Resume.pdf" download="Karthik_Rammoorthy_Resume" class="contactButton">GET RESUME!</a>
+				<a href="/img/Karthik_Rammoorthy_Resume.pdf" download="Karthik_Rammoorthy_Resume.pdf" class="contactButton">GET RESUME!</a>
     
             </div>
     
